clusters/apps/system/adguard/app/loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-ha-dns
  namespace: adguard
  annotations:
    metallb.universe.tf/allow-shared-ip: "adguard-vip"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.63
  externalTrafficPolicy: Cluster
  # ⚠️ This selector targets BOTH Helm Releases because they share the chart name
  selector:
    app.kubernetes.io/name: adguard-home
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
    - name: dns-tls
      port: 853
      protocol: TCP
      targetPort: 853

---
apiVersion: v1
kind: Service
metadata:
  name: adguard-primary-internal
  namespace: adguard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: adguard-home
    app.kubernetes.io/instance: adguard-primary
  ports:
    - name: http
      port: 3000
      targetPort: 3000
